petclinic-k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-clinic
  namespace: petclinic
  labels:
    app: pet-clinic
spec:
  selector:
    matchLabels:
      app: pet-clinic
  replicas: 2
  template:
    metadata:
      labels:
        app: pet-clinic
    spec:
      containers:
        - name: pet-clinic
          image: hgw001468/pet-clinic:0e8f67e
          imagePullPolicy: Always
          ports:
          - name: webtomcat
            containerPort: 8080
            protocol: TCP
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - name: tz-seoul
            mountPath: /etc/localtime
        volumes:
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul 
        terminationGracePeriodSeconds: 29
