petclinic-k8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-clinic-svc
  namespace: petclinic
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pet-clinic
  type: ClusterIP
