petclinic-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-clinic
  namespace: petclinic
spec:
  selector:
    matchLabels:
      app: pet-clinic
template:
  metadata:
    labels:
      app: pet-clinic
spec:
  containers:
  - name: pet-clinic
    image: hgw001468/pet-clinic:init
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
      name: http
    resources:
      requests:
        cpu: 500m
        memory: 512Mi
      limits:
        cpu: 1000m
        memory: 512Mi
    livenessProbe:
      httpGet:
        path: /
        port: http
      initialDelaySeconds: 10
      periodSeconds: 10
      timeoutSeconds: 5
      successThreshold: 1
      failureThreshold: 3
    readinessProbe:
      httpGet:
        path: /
        port: http
      initialDelaySeconds: 5
      periodSeconds: 10
      timeoutSeconds: 1
      successThreshold: 1
      failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: pet-clinic
  namespace: petclinic
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: pet-clinic
  type: ClusterIP
