petclinic-k8s-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-clinic-ing
  namespace: petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: petclinic.info  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pet-clinic-svc
            port:
              number: 8080
